--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ mark { background-color: #FF9; color: #111; font-style: italic; font-weight: 700
 hr { border-width: 1px 0 0; display: block; height: 1px; margin: 10px 0; padding: 0; }
 
 /* Typography */
-body { font: 0.875em/1.5em sans-serif; }
+body { font: 87.5%/1.5 sans-serif; }
 pre, code, kbd, samp, tt, var { font-family: monospace; }
 h1, h2, h3, h4, h5, h6 { font-family: serif; }
 .tagline, #reply-title small, .rtp-thoughts, input, select, textarea { font-family: sans-serif; }
@@ -277,10 +277,10 @@ h1 a:hover, h1 a:focus, h2 a:hover, h2 a:focus { color: #CD3517; text-decoration
 
 /* Post Meta */
 .post-title { float: left; margin: 0; }
-.post-meta { clear: both; color: #666; font-size: 13px; font-style: italic; padding: 7px 0 15px; position: relative; }
+.post-meta { clear: both; color: #666; font-size: 13px; font-style: italic; padding: 6px 0 16px; position: relative; }
     .post-meta p { margin: 0; }
         .rtp-post-comment-count { margin: 12px 0 0; text-align: right; }
-        .rtp-singular .rtp-post-comment-count { margin: 11px 0 0; }
+/*        .rtp-singular .rtp-post-comment-count { margin: 11px 0 0; }*/
             .post-meta span, .published, .post-category span { font-style: normal; }
             .post-meta abbr, .post-meta acronym { font-style: normal; border: 0; }
             
@@ -559,11 +559,12 @@ img.alignright { margin: 5px 0px 5px 15px; }
         input[type=text], input[type=tel], input[type=color], input[type=search], input[type=number], input[type=url], input[type=email], input[type=password], textarea, select { width: 94%; }
 }
 
-/* iPad Portrait 768 x 1024 */
+/* Screen Size 768 */
 @media screen and (max-width: 768px) {
     input[type=search] { height: auto; }
 }
 
+/* Screen Size 640 */
 @media screen and (max-width: 640px) {
     .rtp-grid-8, .rtp-grid-4 { width: 98%; }
     #rtp-nav-menu { float: none; overflow: hidden; }
@@ -572,7 +573,7 @@ img.alignright { margin: 5px 0px 5px 15px; }
     #rtp-nav-menu li:hover > ul { display: none; }
 }
 
-/* Kindle Portrait 600 x 1024 */
+/* Screen Size 600 */
 @media screen and (max-width: 600px) {
     .rtp-site-logo { text-align: center; }
     .rtp-site-logo img { max-width: 60%; }
@@ -582,14 +583,14 @@ img.alignright { margin: 5px 0px 5px 15px; }
     .email-subscription-container label { display: block; }
 }
 
-/* Nicer Android landscape 515 x 295 */
+/* Screen Size  515 */
 @media screen and (max-width: 515px) {
     #rtp-primary-menu, .rtp-grid-8, .rtp-grid-4 { width: 98%; }
     iframe { height: auto; }
     input[type=text], input[type=tel], input[type=color], input[type=search], input[type=number], input[type=url], input[type=email], input[type=password], textarea, select { width: 65%; }
 }
 
-/* iPhone Landscape 480 x 320 */
+/* Screen Size 480 */
 @media screen and (max-width: 480px) {
     #rtp-primary-menu, .rtp-grid-8, .rtp-grid-4 { width: 98.6%; }
     .rtp-singular .rtp-post-comment-count { clear: both; float: left; margin: 0; }
@@ -599,7 +600,7 @@ img.alignright { margin: 5px 0px 5px 15px; }
     .rtp-subscribe-widget-container input[type=email],.widget_search input[type=search]{width:75%}
 }
 
-/* Smartphones (portrait) & iPhone Portrait 320 x 480 & Crappy Android landscape 320 x 240 */
+/* Screen Size 320 */
 @media screen and (max-width: 320px) {
     h1 { font-size: 24px }
     h2 { font-size: 20px }
@@ -614,7 +615,7 @@ img.alignright { margin: 5px 0px 5px 15px; }
     .social-icons li { margin: 0 6px 0 0; }
 }
 
-/* Nicer Android Portrait 295 x 515 */
+/* Screen Size 295 */
 @media screen and (max-width: 295px) {
     input[type=text], input[type=tel], input[type=color], input[type=search], input[type=number], input[type=url], input[type=email], input[type=password], textarea, select { width: 94% }
     .rtp-subscribe-widget-container input[type=email], .widget_search input[type=search] { width: 95% }
@@ -622,7 +623,7 @@ img.alignright { margin: 5px 0px 5px 15px; }
     .rtp-post-comment-count { clear: both; float: left; }
 }
 
-/* Crappy Android Portrait 240 x 320 */
+/* Screen Size 240 */
 @media screen and (max-width: 240px) {
     #rtp-primary-menu, .rtp-grid-8, .rtp-grid-4 { width: 99%; }
     input[type=text], input[type=tel], input[type=color], input[type=search], input[type=number], input[type=url], input[type=email], input[type=password], textarea, select { width: 90%; }
